# factory_method

./: CMakeLists.txt  README.md  creator.cpp  creator.h  creatorA.cpp  creatorA.h  creatorB.cpp  creatorB.h  product.cpp  product.h  product1.cpp  product1.h  product2.cpp  product2.h  test_factory_method.cpp  test_factory_method.h
